# koverlay

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_bin.sh  build_rpm.sh  run.sh
packaging/: koverlay.desktop  koverlay.spec
packaging/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
src/: Overlay.qml  main.cpp  overlay_adaptor.cpp  overlay_adaptor.h  overlay_config.h  overlay_view.cpp  overlay_view.h  resources.qrc
